// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentsPage  should match a snapshot where fetched but no payments 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Payments
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-small-text"
        >
          From this dashboard you can use the below filters to locate payments held by Reapit.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          When you have located your desired payment, you can either send an email request for payment to the customer, or take a payment in person using our payment form.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Both options are available from the slide down on each payment item in the table.
        </p>
        <div
          class="el-border-radius overflow-hidden el-mb5"
        >
          <form>
            <div
              class="controls-container"
            >
              <div
                class="input-full-width el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  max="2019-10-10"
                  min="2017-10-10"
                  name="createdFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Created From
                </label>
              </div>
            </div>
            <div
              class="controls-container"
            >
              <div
                class="input-full-width el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  max="2019-10-10"
                  min="2019-10-10"
                  name="createdTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Created To
                </label>
              </div>
            </div>
            <div
              class="controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                  name="status"
                >
                  <option
                    value=""
                  >
                    None selected
                  </option>
                  <option
                    value="awaitingAuthorisation"
                  >
                    Not Requested
                  </option>
                  <option
                    value="awaitingPosting"
                  >
                    Awaiting Payment
                  </option>
                  <option
                    value="posted"
                  >
                    Paid
                  </option>
                  <option
                    value="rejected"
                  >
                    Failed
                  </option>
                </select>
                <label
                  class="el-label"
                >
                  Status
                </label>
              </div>
            </div>
            <div
              class="controls-container"
            >
              <div
                class="input-full-width el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="description"
                  type="text"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Description
                </label>
              </div>
            </div>
          </form>
        </div>
        <button
          class="el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            Payments Dashboard
          </h1>
          <div
            class="logo"
          >
            <img
              src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
            />
          </div>
        </div>
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No payments match your search criteria
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <aside
      class="el-secondary-nav-container"
    >
      <h1
        class="el-title"
      >
        Payments
      </h1>
      <span
        class="el-mb5 el-icon-size-large el-icon"
      >
        <svg />
      </span>
      <p
        class="el-has-grey-text el-small-text"
      >
        From this dashboard you can use the below filters to locate payments held by Reapit.
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        When you have located your desired payment, you can either send an email request for payment to the customer, or take a payment in person using our payment form.
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Both options are available from the slide down on each payment item in the table.
      </p>
      <div
        class="el-border-radius overflow-hidden el-mb5"
      >
        <form>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                max="2019-10-10"
                min="2017-10-10"
                name="createdFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Created From
              </label>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                max="2019-10-10"
                min="2019-10-10"
                name="createdTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Created To
              </label>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
                name="status"
              >
                <option
                  value=""
                >
                  None selected
                </option>
                <option
                  value="awaitingAuthorisation"
                >
                  Not Requested
                </option>
                <option
                  value="awaitingPosting"
                >
                  Awaiting Payment
                </option>
                <option
                  value="posted"
                >
                  Paid
                </option>
                <option
                  value="rejected"
                >
                  Failed
                </option>
              </select>
              <label
                class="el-label"
              >
                Status
              </label>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="description"
                type="text"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Description
              </label>
            </div>
          </div>
        </form>
      </div>
      <button
        class="el-intent-neutral el-button"
      >
        View Docs
        <div
          class="el-button-loader"
        />
      </button>
    </aside>
    <section
      class="el-page-container"
    >
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          Payments Dashboard
        </h1>
        <div
          class="logo"
        >
          <img
            src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
          />
        </div>
      </div>
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No payments match your search criteria
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PaymentsPage  should match a snapshot where has payments list 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Payments
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-small-text"
        >
          From this dashboard you can use the below filters to locate payments held by Reapit.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          When you have located your desired payment, you can either send an email request for payment to the customer, or take a payment in person using our payment form.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Both options are available from the slide down on each payment item in the table.
        </p>
        <div
          class="el-border-radius overflow-hidden el-mb5"
        >
          <form>
            <div
              class="controls-container"
            >
              <div
                class="input-full-width el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  max="2019-10-10"
                  min="2017-10-10"
                  name="createdFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Created From
                </label>
              </div>
            </div>
            <div
              class="controls-container"
            >
              <div
                class="input-full-width el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  max="2019-10-10"
                  min="2019-10-10"
                  name="createdTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Created To
                </label>
              </div>
            </div>
            <div
              class="controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                  name="status"
                >
                  <option
                    value=""
                  >
                    None selected
                  </option>
                  <option
                    value="awaitingAuthorisation"
                  >
                    Not Requested
                  </option>
                  <option
                    value="awaitingPosting"
                  >
                    Awaiting Payment
                  </option>
                  <option
                    value="posted"
                  >
                    Paid
                  </option>
                  <option
                    value="rejected"
                  >
                    Failed
                  </option>
                </select>
                <label
                  class="el-label"
                >
                  Status
                </label>
              </div>
            </div>
            <div
              class="controls-container"
            >
              <div
                class="input-full-width el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="description"
                  type="text"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Description
                </label>
              </div>
            </div>
          </form>
        </div>
        <button
          class="el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            Payments Dashboard
          </h1>
          <div
            class="logo"
          >
            <img
              src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
            />
          </div>
        </div>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="7"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              Property
            </div>
            <div
              class="el-table-header"
            >
              Amount
            </div>
            <div
              class="el-table-header"
            >
              Customer
            </div>
            <div
              class="el-table-header"
            >
              Description
            </div>
            <div
              class="el-table-header"
            >
              Client A/C
            </div>
            <div
              class="el-table-header"
            >
              Status
            </div>
            <div
              class="el-table-header"
            >
              Request Date
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Property"
                />
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Amount"
                >
                  £0
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer"
                >
                  -
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Description"
                >
                  We are delighted to offer for sale this EXTENDED THREE BEDROOMED SEMI DETACHED PROPERTY situated in a much sought after residential location of Greasby, having the benefits of two separate entertaining rooms, morning room, extended kitchen. To the first floor there are three bedrooms, spacious family bathroom, gas central heating gardens front and rear and off road parking.
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Client A/C"
                />
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Status"
                />
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Request Date"
                >
                  12 Dec 2018
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                    >
                      Take Payment
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-secondary el-button"
                    >
                      Request Payment
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            1
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <aside
      class="el-secondary-nav-container"
    >
      <h1
        class="el-title"
      >
        Payments
      </h1>
      <span
        class="el-mb5 el-icon-size-large el-icon"
      >
        <svg />
      </span>
      <p
        class="el-has-grey-text el-small-text"
      >
        From this dashboard you can use the below filters to locate payments held by Reapit.
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        When you have located your desired payment, you can either send an email request for payment to the customer, or take a payment in person using our payment form.
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Both options are available from the slide down on each payment item in the table.
      </p>
      <div
        class="el-border-radius overflow-hidden el-mb5"
      >
        <form>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                max="2019-10-10"
                min="2017-10-10"
                name="createdFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Created From
              </label>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                max="2019-10-10"
                min="2019-10-10"
                name="createdTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Created To
              </label>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
                name="status"
              >
                <option
                  value=""
                >
                  None selected
                </option>
                <option
                  value="awaitingAuthorisation"
                >
                  Not Requested
                </option>
                <option
                  value="awaitingPosting"
                >
                  Awaiting Payment
                </option>
                <option
                  value="posted"
                >
                  Paid
                </option>
                <option
                  value="rejected"
                >
                  Failed
                </option>
              </select>
              <label
                class="el-label"
              >
                Status
              </label>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="description"
                type="text"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Description
              </label>
            </div>
          </div>
        </form>
      </div>
      <button
        class="el-intent-neutral el-button"
      >
        View Docs
        <div
          class="el-button-loader"
        />
      </button>
    </aside>
    <section
      class="el-page-container"
    >
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          Payments Dashboard
        </h1>
        <div
          class="logo"
        >
          <img
            src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
          />
        </div>
      </div>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="7"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Property
          </div>
          <div
            class="el-table-header"
          >
            Amount
          </div>
          <div
            class="el-table-header"
          >
            Customer
          </div>
          <div
            class="el-table-header"
          >
            Description
          </div>
          <div
            class="el-table-header"
          >
            Client A/C
          </div>
          <div
            class="el-table-header"
          >
            Status
          </div>
          <div
            class="el-table-header"
          >
            Request Date
          </div>
          <div
            class="el-table-header"
          >
            <span
              class="el-icon"
              style="font-size: 1.2rem;"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Property"
              />
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Amount"
              >
                £0
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Description"
              >
                We are delighted to offer for sale this EXTENDED THREE BEDROOMED SEMI DETACHED PROPERTY situated in a much sought after residential location of Greasby, having the benefits of two separate entertaining rooms, morning room, extended kitchen. To the first floor there are three bedrooms, spacious family bathroom, gas central heating gardens front and rear and off road parking.
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Client A/C"
              />
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Status"
              />
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Request Date"
              >
                12 Dec 2018
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-center el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                  >
                    Take Payment
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-secondary el-button"
                  >
                    Request Payment
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PaymentsPage  should match a snapshot where loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Payments
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-small-text"
        >
          From this dashboard you can use the below filters to locate payments held by Reapit.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          When you have located your desired payment, you can either send an email request for payment to the customer, or take a payment in person using our payment form.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Both options are available from the slide down on each payment item in the table.
        </p>
        <div
          class="el-border-radius overflow-hidden el-mb5"
        >
          <form>
            <div
              class="controls-container"
            >
              <div
                class="input-full-width el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  max="2019-10-10"
                  min="2017-10-10"
                  name="createdFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Created From
                </label>
              </div>
            </div>
            <div
              class="controls-container"
            >
              <div
                class="input-full-width el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  max="2019-10-10"
                  min="2019-10-10"
                  name="createdTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Created To
                </label>
              </div>
            </div>
            <div
              class="controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                  name="status"
                >
                  <option
                    value=""
                  >
                    None selected
                  </option>
                  <option
                    value="awaitingAuthorisation"
                  >
                    Not Requested
                  </option>
                  <option
                    value="awaitingPosting"
                  >
                    Awaiting Payment
                  </option>
                  <option
                    value="posted"
                  >
                    Paid
                  </option>
                  <option
                    value="rejected"
                  >
                    Failed
                  </option>
                </select>
                <label
                  class="el-label"
                >
                  Status
                </label>
              </div>
            </div>
            <div
              class="controls-container"
            >
              <div
                class="input-full-width el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="description"
                  type="text"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Description
                </label>
              </div>
            </div>
          </form>
        </div>
        <button
          class="el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            Payments Dashboard
          </h1>
          <div
            class="logo"
          >
            <img
              src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
            />
          </div>
        </div>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <aside
      class="el-secondary-nav-container"
    >
      <h1
        class="el-title"
      >
        Payments
      </h1>
      <span
        class="el-mb5 el-icon-size-large el-icon"
      >
        <svg />
      </span>
      <p
        class="el-has-grey-text el-small-text"
      >
        From this dashboard you can use the below filters to locate payments held by Reapit.
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        When you have located your desired payment, you can either send an email request for payment to the customer, or take a payment in person using our payment form.
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Both options are available from the slide down on each payment item in the table.
      </p>
      <div
        class="el-border-radius overflow-hidden el-mb5"
      >
        <form>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                max="2019-10-10"
                min="2017-10-10"
                name="createdFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Created From
              </label>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                max="2019-10-10"
                min="2019-10-10"
                name="createdTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Created To
              </label>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
                name="status"
              >
                <option
                  value=""
                >
                  None selected
                </option>
                <option
                  value="awaitingAuthorisation"
                >
                  Not Requested
                </option>
                <option
                  value="awaitingPosting"
                >
                  Awaiting Payment
                </option>
                <option
                  value="posted"
                >
                  Paid
                </option>
                <option
                  value="rejected"
                >
                  Failed
                </option>
              </select>
              <label
                class="el-label"
              >
                Status
              </label>
            </div>
          </div>
          <div
            class="controls-container"
          >
            <div
              class="input-full-width el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="description"
                type="text"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Description
              </label>
            </div>
          </div>
        </form>
      </div>
      <button
        class="el-intent-neutral el-button"
      >
        View Docs
        <div
          class="el-button-loader"
        />
      </button>
    </aside>
    <section
      class="el-page-container"
    >
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          Payments Dashboard
        </h1>
        <div
          class="logo"
        >
          <img
            src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
          />
        </div>
      </div>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PropertyCell should match a snapshot for default status 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-fade-in"
      >
        15 Example street Solihull West Midlands B91 2XX
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-fade-in"
    >
      15 Example street Solihull West Midlands B91 2XX
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`StatusCell should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <span
        class="el-intent-success el-status-indicator"
      />
       
      Paid
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <span
      class="el-intent-success el-status-indicator"
    />
     
    Paid
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`StatusCell should match a snapshot for default status 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
